Switch UI from JavaFX to Swing and add DB scripts
Migrated the application UI from JavaFX to Java Swing for improved compatibility and easier deployment. Added database_setup.sql for PostgreSQL schema and sample data. Implemented user and book management features, including add, delete, and loan operations. Updated README to reflect Swing usage and revised setup instructions. Added new classes for loan management and improved modularity.